--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             <span class="high-score">Recorde: 0</span>
         </div>
         <div class="play-board"></div>
-        <div class="controls">
-            <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
-            <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
-            <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
-            <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
-        </div>
+        
+    </div>
+    <div class="controls">
+        <div><span><i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i></span></div>
+        <div><span><i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i></span></div>
+        <div><span><i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i></span></div>
+        <div><span><i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i></span></div>
     </div>
     <footer>
         <p>&copy; 2024 André Luiz Silva Dias Borges. Todos os direitos reservados.</p>
